@@ -506,7 +506,6 @@ if test "$ac_cv_cxx_compiler_gnu" = "yes"; then
     ucsim_cv_MM="-M"
   fi
   rm -f _test_.*)
-  M_OR_MM=$ucsim_cv_MM
 
   # This is the first time when CFLAGS are set/modified!!
 
@@ -530,13 +529,14 @@ if test "$ac_cv_cxx_compiler_gnu" = "yes"; then
     CXXFLAGS="$CXXFLAGS -pipe"
   fi
 
+  MAKEDEP="$CXX $ucsim_cv_MM"
   WALL_FLAG="-Wall"
 else
   bor_IS_SUNPRO
   if test "$bor_cv_cxx_compiler_sunpro" = "yes"; then
-    M_OR_MM="-xM1"
-    WALL_FLAG=
     CFLAGS="-xO2 $CFLAGS"
+    MAKEDEP="$CXX -xM1"
+    WALL_FLAG=
   fi
 fi
 
@@ -546,7 +546,7 @@ PICOPT=$pic_flag
 if test "$PICOPT"x != "x"; then
     SHAREDLIB="yes"
 fi
-AC_SUBST(M_OR_MM)
+AC_SUBST(MAKEDEP)
 AC_SUBST(WALL_FLAG)
 AC_SUBST(SHAREDLIB)
 AC_SUBST(PICOPT)
